- Hover on node in radial graph. - Popup tooltip took out of graph component to tab-details component. - Fixed wrapping of the node properties if its overflowing.

--- a/src/app/modules/shared/network-graph/node-visual/node-visual.component.scss
+++ b/src/app/modules/shared/network-graph/node-visual/node-visual.component.scss
@@ -23,7 +23,22 @@
     height: 6px;
     width: 16px;
     transform: translate(-8px, -3px);
+    fill:green;
   }  
+
+  .nodeImg:hover {
+    // height: 6px;
+    // width: 16px;
+    // transform: translate(-8px, -3px);
+    fill:green;
+  }  
+
+  // .node:hover {
+  //   stroke: white;
+  //   stroke-width: 0;
+  //   fill: #8C5BD8;
+  // }
+//   invert(100%) sepia(0%) saturate(0%) hue-rotate(158deg) brightness(107%) contrast(101%);
 }
 .selected {
   image {
@@ -33,10 +48,22 @@
 }
 .normal {
   image {
-    filter: invert(13%) sepia(88%) saturate(6133%) hue-rotate(266deg) brightness(70%) contrast(102%);
-    color: #5414B4;
+    filter: invert(60%) sepia(90%) saturate(6103%) hue-rotate(253deg) brightness(78%) contrast(92%);
+    color: #8840c2;
   }  
 }
+
+.normal:hover {
+  image {
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(158deg) brightness(107%) contrast(101%);
+    color: white;
+  }  
+  .node {
+    fill:#8840c2;
+    filter: drop-shadow(0px 0px 3px rgb(84 20 180 / 0.6));
+  }
+}
+
 .up {
   image {
     filter: invert(53%) sepia(74%) saturate(2892%) hue-rotate(83deg) brightness(121%) contrast(124%);
