--- a/src/app/modules/tabs/tab-details/tab-details.component.scss
+++ b/src/app/modules/tabs/tab-details/tab-details.component.scss
@@ -597,3 +597,60 @@ input {
         cursor: pointer;
     }
 }
+
+#box{
+    //width:150px;
+    height: fit-content;
+    border:1px solid #8840c2; 
+    position: absolute; 
+    top: 50%; left: 20%;
+    background-color: white; 
+    border-radius: 5px;
+    width: 200px;
+    margin-left: 20px;
+    padding: 5px 14px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, .7);
+    -webkit-box-shadow: -0px 0px 6px rgba(0, 0, 0, .7);
+    -moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, .7);
+}
+
+#box:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: -8px;
+    top: 15px;
+    width: 14px;
+    height: 14px;
+    border-color: #8840c2;
+    border-width: 1px;
+    border-style: none none solid solid;
+    background-color: #fff;
+    box-shadow: -2px 2px 3.5px rgba(0, 0, 0, .5);
+    -webkit-box-shadow: -2px 2px 3.5px rgba(0, 0, 0, .5);
+    -moz-box-shadow: -2px 2px 3.5px rgba(0, 0, 0, .5);
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+}
+
+#box:after{
+    width: 0;
+	height: 0;
+    background-color: solid;
+	border-top: 25px solid transparent;
+	border-left: 50px solid #555;
+	border-bottom: 25px solid transparent;
+}
+
+.node-properties{
+    color:#a7a6a6;
+    font-size: smaller; 
+    margin-left: 2px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
